--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <th>Department</th>
         <th>Course Number</th>
         <th>Course Name </th>
+        <th> Details</th>
     </table>
     <script src="./scripts/index.js"></script>
 </body>
