--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>All Courses</title>
 </head>
 <body>
     <table id="usertable">
@@ -12,6 +12,11 @@
         <th>Course Name </th>
         <th> Details</th>
     </table>
+
+    <br><br>
+
+    <input type="button" id="newCourse" value="Add New Course">
+
     <script src="./scripts/index.js"></script>
 </body>
 </html>
